fix: colors variables and remove extra spaces in js

--- a/assets/scss/templates/_header.scss
+++ b/assets/scss/templates/_header.scss
@@ -1,8 +1,8 @@
 /* header */
 $dp-header-height: 4em;
 $dp-border-radius: 5px;
-$dp-text-aling: center; /* header */
-
+$dp-text-aling: center;
+/* header */
 .header-main {
   height: $dp-header-height;
   border-bottom: 1px solid $dp-color-sylver;
@@ -122,7 +122,6 @@ $dp-text-aling: center; /* header */
   width: 100%;
 }
 /* nav right */
-
 .nav-right-main {
   display: flex;
 }
@@ -183,7 +182,7 @@ $dp-text-aling: center; /* header */
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
     width: 40px;
-    background: rgb(153, 207, 184);
+    background: $dp-color-default;
     transition: all 0.3s;
   }
 
@@ -197,7 +196,7 @@ $dp-text-aling: center; /* header */
     line-height: 60px;
     width: 60px;
     min-width: 60px;
-    background: rgb(153, 207, 184);
+    background: $dp-color-default;
     color: white;
     border-radius: 50%;
     text-align: center;
@@ -214,7 +213,7 @@ $dp-text-aling: center; /* header */
   border-bottom: 3px solid $dp-border-grey;
   border-left: 1px solid $dp-border-grey;
   border-right: 1px solid $dp-border-grey;
-  border-top: 3px solid #C9C7BD;
+  border-top: 3px solid $dp-color-default;
   border-radius: 3px;
   padding: 15px 15px 0;
   position: absolute;
@@ -237,7 +236,7 @@ $dp-text-aling: center; /* header */
     height: 0;
     width: 0;
     border-width: 0 4px 4px 4px;
-    border-color: transparent transparent #C9C7BD transparent;
+    border-color: transparent transparent $dp-color-default transparent;
     left: inherit;
     right: 12px;
     top: -7px;
